--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mobx": "^5.9.4",
+    "mobx-react": "^5.4.4",
+    "mobx-react-devtools": "^6.1.1",
     "mongoose": "^5.5.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
