--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
     "mobx-react-devtools": "^6.1.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.11",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
