--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "recharts": "^1.6.2",
+    "request": "^2.88.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
