--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mobx-react-devtools": "^6.1.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.11",
+    "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -80,7 +81,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
